--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/knowledge_base" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://www.web-rdf.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -34,4 +34,5 @@ jekyll_rdf:
   default_template: "rdf_index.html"
   class_template_mappings:
       "http://www.web-rdf.com/Project" : project.html
+      "http://www.web-rdf.com/Person" : person.html
   instance_template_mappings:
